--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native": "0.46.4",
     "react-native-elements": "^0.15.0",
     "react-native-side-menu": "^1.0.2",
+    "react-native-simple-table": "0.0.2",
     "react-native-vector-icons": "^4.2.0",
     "react-navigation": "^1.0.0-beta.11"
   },
