--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.0.0-alpha.12",
     "react-native": "0.46.4",
+    "react-native-chart": "^1.0.8-beta",
     "react-native-elements": "^0.15.0",
     "react-native-side-menu": "^1.0.2",
     "react-native-simple-table": "0.0.2",
